--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     font-weight: 500;
     margin-left: 1%;
 }
-.background-font span{
+.background-font span, .clr{
     color: #FBA500;
 }
 .about-web {
@@ -57,6 +57,9 @@ body{
 }
 .section2{
     display: flex;
+    background-image: url(images/top-banner.png);
+    background-repeat:no-repeat ;
+    background-size: cover;
 }
 .about,.image{
     width: 50%;
@@ -77,6 +80,7 @@ body{
     font-size:21px ;
     font-weight: 400;
     line-height: 28px;
+    text-align: justify;
 }
 .about p span{
     color: #3175A3;
@@ -87,8 +91,10 @@ body{
 
 }
 .section3{
-    margin-bottom: 50px;
-    background-color: #EFEFF5;
+    margin-bottom: 90px;
+    background: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .section3 h1{
@@ -119,4 +125,59 @@ body{
     border: 1px solid #000;
     box-shadow: rgb(0 0 0 / 50%) 4px 4px 5px, rgb(0 0 0 / 50%) -4px -4px 10px;
 }
+.section4{
+    display: flex;
+    margin-bottom:60px ;
+}
+ .dev , .stack{
+    width: 40%;
+    box-shadow: 12px 12px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 4%;
+    padding-bottom: 1%;
+    padding-right: 2%;
+    margin-bottom: 40px;
+    border-radius: 10px;
+}
+.dev h2 , .stack h2{
+    font-size: 35px;
+}
+.dev h3 , .stack h3{
+    font-size: 25px;
+}
+.dev p , .stack p{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(
+        rgb(231, 16, 16),
+        rgb(80, 201, 24) );
+    border-image-slice: 1;
+}
+.stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(
+        rgb(13, 63, 226),
+        rgb(4, 223, 223) );
+    border-image-slice: 1;
+}
+.footer{
+    width: 100%;
+    height: 110px;
+    background-color:rgb(26, 32, 44);
+    overflow: hidden;
+}
+.footer p{
+    color: #fff;
+    text-align: center;
+    margin-top: 50px ;
+    
+}
+
+
+
 
